# nocturne

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: custom_functions.cmake
include/nocturne/: config.hpp.in  host.hpp  imodule.hpp  iplatform.hpp  nocturne.hpp  plog_headers.hpp  plugin.hpp
include/nocturne/linux/: linux_module.hpp  linux_platform.hpp
include/nocturne/vst3/: vst3_headers.hpp  vst3_host_context.hpp  vst3_plug_view.hpp
src/: CMakeLists.txt  host.cpp  main.cpp  plugin.cpp
src/linux/: linux_module.cpp  linux_platform.cpp
src/vst3/: vst3_host_context.cpp  vst3_plug_view.cpp
